--- a/src/index.less
+++ b/src/index.less
@@ -10,23 +10,43 @@
   }
 }
 
+.si {
+  &.inline {
+    height: 1.2em;
+    width: 1.2em;
+    vertical-align: sub;
+  }
+}
+
 .si-figure {
   padding: 5px;
   position: relative;
   display: inline-block;
-  margin: 0 0 20px;
+  margin: 0;
+  background-color: #f9f9f9;
+  border: 1px solid #fff;
   width: 140px;
+  height: 110px;
   color: #acacac;
   vertical-align: top;
   text-align: center;
   font-size: 14px;
+  cursor: pointer;
   &:hover {
     background-color: #eee;
+  }
+  &.selected {
+    background-color: #337ab7;
+    color: white;
+    opacity: .9;
+    svg {
+      fill: white;
+    }
   }
 }
 
 .tab-content {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 #icons {
@@ -76,4 +96,18 @@
     right: 0;
     top: 0;
   }
+}
+
+#download {
+  .si {
+    fill: white;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+.select-all {
+  cursor: pointer;
 }
