--- a/src/style/svg-icon.less
+++ b/src/style/svg-icon.less
@@ -1,18 +1,11 @@
-.si-wrapper {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  overflow: hidden;
-}
 
 .si-figure {
-  padding: 5px;
+  padding: 5px 0;
   position: relative;
   display: inline-block;
   margin: 0;
   background-color: #f9f9f9;
-  border: 1px solid #fff;
+  outline: 1px solid white;
   width: 140px;
   height: 110px;
   color: #999;
