--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,7 +1,10 @@
 @import "../../node_modules/lesshat/lesshat";
 @import "../../node_modules/normalize.css/normalize.css";
+@import "./variables";
+@import "./button";
 @import "./github-corner";
 @import "./helper";
 @import "./layout";
 @import "./loading";
 @import "./svg-icon";
+@import "./tab";
