--- a/src/style/svg-icon.less
+++ b/src/style/svg-icon.less
@@ -6,8 +6,7 @@
   margin: 0;
   background-color: #f9f9f9;
   outline: 1px solid white;
-  width: 140px;
-  height: 110px;
+  height: 100px;
   color: #999;
   vertical-align: top;
   text-align: center;
@@ -32,6 +31,12 @@
     svg {
       fill: white;
     }
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .si-figure {
+    width: 12.5%;
   }
 }
 
